# deforestation_copernicus

./: .gitignore  README.md  docker-compose-infra.yaml  pyproject.toml
src/deforestation_copernicus/: settings.py
src/deforestation_copernicus/core/: download_request_pusher.py  image_merger.py  kafka_to_delta_consumer.py
src/deforestation_copernicus/core/data_models/: base.py  download_request.py  satellite_data.py  sentinel_hub_result.py
src/deforestation_copernicus/core/messages/: download_request.py
src/deforestation_copernicus/core/satellite_data_download/: download_request_consumer.py  download_request_pusher.py  to_download_consumer.py
src/deforestation_copernicus/core/services/satellite_data/: download_request_consumer.py  download_request_pusher.py  (+1 more)
src/deforestation_copernicus/core/utils/: config.py  evalscripts.py  utils.py
src/deforestation_copernicus/io/: base_kafka_producer.py  data_models.py  delta_table_reader.py  geoalchemy_client.py  logger.py  nvdi_fetcher.py
src/deforestation_copernicus/io/kafka/: base_consumer.py  base_producer.py
src/deforestation_copernicus/io/minio/: client_minio.py
src/deforestation_copernicus/io/sentinel_hub/: nvdi.py  true_color.py  universal_fetcher.py
src/deforestation_copernicus/jobs/: images_fetcher.py  query_db_and_crop.py
src/deforestation_copernicus/jobs/consumers/: consume_download_request.py
src/deforestation_copernicus/jobs/database/: rollback.py
src/deforestation_copernicus/jobs/delta/: read_changes.py
src/deforestation_copernicus/jobs/producers/: push_download_request.py
(+3 files in other folders)
