[project]
name = "deforestation_copernicus"
version = "0.0.1"
authors = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
requires-python = "~=3.12"
readme = "README.md"
maintainers = [{ name = "Pedro Queiros", email = "coding.paradox013@passmail.net" }]
dependencies = [
    "retry",
    "ruff",
    "uuid6",
    "sentinelhub",
    "rasterio",
    "SQLAlchemy>=2.0",
    "GeoAlchemy2",
    "opencv-python",
    "pillow",
    "matplotlib",
    "psycopg[binary, pool]",

    "deltalake",
    "boto3",
    "s3fs",
    "uuid6",
    "polars",
    "kafka-python",
    "faker",
    "ruff",
    "pygeohash",
    "rio-cogeo",
    "minio",

    
]



[project.urls]
Repository = "https://github.com/PedroMTQ/deforestation_copernicus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 110
lint.select = ["E",  "W",  "F",  "I", "B"]
lint.ignore=["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]


